# FixYouTube

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
docker/: fixyoutube.subdomain.conf
fixyoutube/: __init__.py  __main__.py  api.py  constants.py  db.py  views.py  yt_info.py
fixyoutube/templates/: base.html  index.html
fxyoutube/: __init__.py  __main__.py  constants.py  db.py  views.py  yt_info.py
fxyoutube/templates/: base.html
tests/: test_flask.py
