[tool.poetry]
name = "fixyoutube"
version = "0.1.0"
description = "Embed YouTube videos on Telegram, Discord and more!"
authors = ["Marco Andronaco <birabittoh@duck.com>"]
readme = "README.md"
packages = [{include = "fixyoutube"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
requests = "^2.31.0"
yt-dlp = "^2023.7.6"
peewee = "^3.16.3"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
waitress = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
